# OmniFace

./: .dockerignore  .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  README.md  config.yaml  docker-compose.yml
app/: CMakeLists.txt  main.cc
docker/: build.sh
include/omniface/: types.h
include/omniface/core/analysis/: au_analyzer.h  gaze_estimator.h  openface_analyzer.h  pose_estimator.h
include/omniface/core/detail/: face_aligner.h  onnx_session.h  preprocess.h
include/omniface/core/detection/: face_detector.h
include/omniface/core/recognition/: align.h  face_matcher.h  face_recognizer.h
include/omniface/core/tracking/: bytetrack_engine.h  kalman_filter.h  lapjv.h  strack.h
include/omniface/pipeline/: config.h  pipeline.h
include/omniface/server/: web_server.h
include/omniface/viz/: au_visualizer.h  gaze_visualizer.h  pose_visualizer.h  visualizer.h
src/: CMakeLists.txt
src/core/analysis/: au_analyzer.cc  dlib_stub.cc  gaze_estimator.cc  openface_analyzer.cc  pose_estimator.cc
src/core/detail/: onnx_session.cc  preprocess.cc
src/core/detection/: face_detector.cc
src/core/recognition/: face_matcher.cc  face_recognizer.cc
src/core/tracking/: bytetrack_engine.cc  kalman_filter.cc  lapjv.cc  strack.cc
src/pipeline/: config.cc  pipeline.cc  pipeline_processing.cc
src/server/: json_utils.cc  web_server.cc  web_server_pipeline.cc
src/viz/: visualizer.cc
web/: csv.html  index.html  style.css
web/js/: api.js  app.js  attention.js  charts.js
web/js/views/: config.js  history.js  monitor.js
